tests/test163.rael.exp
Error [tests/test163.rael:2:9]: Expected at least one expression after 'with'
|     with
|         ^
